# nifty-options-vrp-research

./: .env.example  .gitattributes  .gitignore  AUDIT_REPORT.md  DATA_DICTIONARY.md  DATA_LINEAGE.md  Makefile  README.md  REPRODUCE.md  pyproject.toml
audit/: gold_dataset_audit.json  phase10_cost_reserve.csv  phase10_dimension_summary.csv  phase10_fly_cost_surface.parquet  phase10_manifest.json  phase10_selected_profile_tradebook.csv  phase10_selected_profiles.csv  phase10_tearsheet.json  phase2_defined_risk_vrp.json  phase2_defined_risk_vrp_events.json  phase2_final_hypothesis_closeout.json  phase2_hypothesis_evidence_manifest.json  phase2_intraday_volatility.json  phase2_intraday_volatility_regimes.json  phase2_matched_realized_variance.json  phase2_moneyness_horizon_boundary.json  phase2_playable_universe.json  phase2_unconditional_moneyness_horizon.json  phase2_unconditional_observed_computed.json  phase2_vrp_curve_crossings.json  phase3_full_strategy_legbook.csv  phase3_full_strategy_manifest.json  phase3_full_strategy_tearsheet.json  phase3_full_strategy_tradebook.csv  phase3_tail_percentile_manifest.json  phase3_tail_percentile_tearsheet.json  phase4_capacity_curve.csv  phase4_cost_aware_manifest.json  phase4_cost_aware_summary.json  phase4_multiday_coverage.csv  phase4_multiday_manifest.json  phase4_multiday_summary.json  phase4_multiday_tradebook.csv  phase5_final_attempt_calibration.csv  phase5_final_attempt_dataset_manifest.json  phase5_final_attempt_dataset_summary.json  phase5_final_attempt_manifest.json  phase5_final_attempt_models.json  phase5_final_attempt_monthly.csv  phase5_final_attempt_summary.json  (+28 more)
docs/: ARCHIVE_LAYERS.md  MODULE_MAP.md  PROVENANCE.md  REPOSITORY_PURPOSE.md  (+1 more)
release/: README.md  (+1 more)
(+335 files in other folders)
