[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nifty-options-data-foundation"
version = "1.0.0"
description = "Audited NIFTY options data acquisition, cleaning, BSM, SPAN, joining, and release pipeline"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Kd6669" }]
dependencies = [
  "curl_cffi>=0.7",
  "dhanhq>=2.2.0",
  "duckdb==1.5.2",
  "growwapi>=1.5.0",
  "numba==0.64.0",
  "numpy==2.4.3",
  "pandas>=2.1",
  "pyarrow>=15",
  "redis>=5.0,<6",
  "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.12",
]
submission = [
  "matplotlib>=3.8",
]

[project.scripts]
dhan-data = "dhan_data_fetch_stream.cli:main"
nifty-data = "dhan_data_fetch_stream.cli:main"
nifty-data-audit = "tools.audit_gold_dataset:main"
nifty-data-sample = "tools.create_sample:main"
span-backfill = "nifty_span.cli:span_backfill_main"
span-maintenance = "nifty_span.cli:span_maintenance_main"
span-groww-margin-parity = "nifty_span.cli:span_groww_margin_parity_main"
nifty-hypothesis = "nifty_hypothesis.cli:main"
module3-hypothesis-test = "research.module3_hypothesis_testing.run:main"
module4-sizing-risk = "research.module4_sizing_risk_management.run:main"
final-submission = "research.module5_final_submission.run:main"
team-bundle = "tools.team_bundle:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["dhan_data_fetch_stream*", "nifty_span*", "nifty_hypothesis*", "nifty_execution*", "research*", "tools*"]
namespaces = false

[tool.ruff]
target-version = "py311"
line-length = 100
